--- a/view/sideNavbar.html
+++ b/view/sideNavbar.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="/css/sideNavbar.css" />
   </head>
   <body>
-    <nav class="sideNav">
+    <nav class="sideNav active">
       <div class="sideNav-header">
         <a href="#" class="navbar-brand">
           <i class="bx bxs-pyramid"></i>
