--- a/view/sideNavbar.html
+++ b/view/sideNavbar.html
@@ -19,7 +19,7 @@
     <nav class="sideNav active">
       <div class="sideNav-header">
         <a href="#" class="navbar-brand">
-          <i class="bx bxs-pyramid"></i>
+          <i class="bx bxl-sketch"></i>
           <div class="navbar-brand__name">M1LKY</div>
         </a>
         <div class="menu-btn">
@@ -32,7 +32,7 @@
         <ul class="navbar-list">
           <li class="navbar-list-item active">
             <a href="#" class="list-item__link">
-              <i class="bx bx-border-all"></i>
+              <i class="bx bxs-pyramid"></i>
               <span class="link-name">Dashboard</span>
             </a>
           </li>
@@ -52,6 +52,12 @@
             <a href="#" class="list-item__link">
               <i class="bx bx-receipt"></i>
               <span class="link-name">Orders</span>
+            </a>
+          </li>
+          <li class="navbar-list-item">
+            <a href="#" class="list-item__link">
+              <i class="bx bx-heart"></i>
+              <span class="link-name">Save</span>
             </a>
           </li>
           <li class="navbar-list-item">
