--- a/css/sideNavbar.css
+++ b/css/sideNavbar.css
@@ -132,6 +132,7 @@ a {
   height: 50px;
   min-width: 50px;
   line-height: 50px;
+  font-size: 20px;
   border-radius: 12px;
   text-align: center;
 }
